--- a/ClubCloud.Afhangen.WebSite/SiteDefinitions/ClubCloudAfhangen/index.html
+++ b/ClubCloud.Afhangen.WebSite/SiteDefinitions/ClubCloudAfhangen/index.html
@@ -1,49 +1,53 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <title></title>
-    <script src="Scripts/jQuery/jquery.js"></script>    
+    <script src="Scripts/jQuery/jquery.js" type="text/javascript"></script>
     <script src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjax.js" type="text/javascript"></script>
     <script src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxApplicationServices.js" type="text/javascript"></script>
     <script src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxTimer.js" type="text/javascript"></script>
-    <script src="_vti_bin/ClubCloud.Afhangen/Afhangen.svc/script/js"></script>
-    <script data-main="Scripts/Afhangen.js" src="Scripts/Require/require.js"></script>
+    <script src="_vti_bin/ClubCloud/Afhangen.svc/script/js" type="text/javascript"></script>
+    <script data-main="Controllers/Afhangen.js" src="Scripts/Require/require.js"></script>
     <link href="Css/angular-block-ui.css" rel="stylesheet" />
     <link href="Css/bootstrap.css" rel="stylesheet" />
-    <link href="Css/styles.css" rel="stylesheet" />
+    <link href="Css/Styles.css" rel="stylesheet" />
 </head>
 
-<body onload="init()" ng-controller="indexController" ng-init="initializeController()" ng-cloak>
+<body ng-controller="indexController" ng-init="initializeController()" ng-cloak="">
+
     <div class="header">
         <div class="header-top">
             <div class="container">
-
                 <div class="top-nav">
                     <span class="menu"><img src="images/menu.png" alt=""> </span>
-                    <p>Home</p>
-                    <ul class="nav navbar-nav" ng-repeat="menuItem in MenuItems | filter:{Module: 'Main'}">
-                        <li><a href="{{menuItem.Route}}">{{menuItem.Description}}</a></li>
+                    <ul class="nav navbar-nav">
+                        <li ng-repeat="menuItem in MenuItems">
+                            <a href="{{menuItem.Route}}">{{menuItem.Description}}</a><span>/</span>
+                        </li>
                     </ul>
                     <!--script-->
-                    <script type="text/javascript">
+                    <script>
                         $("span.menu").click(function () {
                             $(".top-nav ul").slideToggle(500, function () {
                             });
                         });
                     </script>
                 </div>
-
             </div>
         </div>
         <div class="header-bottom">
             <div class="container">
                 <div class="logo">
                     <h1><a href="index.html">ClubCloud Afhangen</a></h1>
+                    <p>Social Services</p>
                 </div>
             </div>
         </div>
     </div>
-    <div style="margin: 75px 50px 50px 50px" ng-view></div>
+    <div id="ViewPort" ng-view="">
+    </div>
+
 </body>
 
 </html>
