--- a/ClubCloud.Afhangen.WebSite/SiteDefinitions/ClubCloudClubWebsite/index.html
+++ b/ClubCloud.Afhangen.WebSite/SiteDefinitions/ClubCloudClubWebsite/index.html
@@ -23,9 +23,8 @@
     <script data-main="Components/ClubCloud/ClubCloud.js" src="Components/Script/require.js" type="text/javascript"></script>
 </head>
 <body>
-    <div data-ui-view=""></div>
-    <div data-ui-view="header"></div>
-    <div data-ui-view="container"></div>
-    <div data-ui-view="footer"></div>
+    <div ui-view="Header"></div>
+    <div ui-view="Content"></div>
+    <div ui-view="Footer"></div>
 </body>
 </html>
