--- a/ClubCloud.Afhangen.WebSite/SiteDefinitions/ClubCloudClubWebsite/index.html
+++ b/ClubCloud.Afhangen.WebSite/SiteDefinitions/ClubCloudClubWebsite/index.html
@@ -2,7 +2,7 @@
 <html class="ng-scope" lang="{{site.Language}}" dir="{{site.Direction}}">
 
 <head>
-    <title>{{site.Name}} - {{page.Name}}</title>
+    <title>{{site.Name}} - {{Pagina.Title}}</title>
     <meta charset="utf-8">
     <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
     <meta http-equiv="PRAGMA" content="NO-CACHE">
@@ -19,15 +19,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="{{site.Name}}">
+    <link href="css/animations.css" rel="stylesheet" type="text/css" media="all" />
     <script src="Components/Script/webcomponents-lite.js" type="text/javascript"></script>
-    <link rel="import" href="Components/Polymer/polymer.html">
+    <!-- <link rel="import" href="Components/Polymer/polymer.html"> -->
     <!--  <link rel="import" href="Components/Elements/Elements.html"> -->
+    <link rel="import" href="Components/ClubCloud/Mededelingen/Mededelingen.html">
+    <link rel="import" href="Components/ClubCloud/Content/Content.html">
+    <link rel="import" href="Components/ClubCloud/Agenda/Agenda.html">
     <script data-main="Controllers/ClubCloud.js" src="Components/Script/require.js" type="text/javascript"></script>
 </head>
 
 <body unresolved class="fullbleed layout vertical">
     <div ui-view="Header"></div>
-    <div ui-view="Content"></div>
+    <div ui-view="Content"><div class="bubbles aligntop" style="top:48%;">laden...</div></div>
     <div ui-view="Footer"></div>
 </body>
 </html>
